// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessQueryPresetFactory provided methods are assigned to final object and those methods return access control query params with action and subject 1`] = `
{
  "action": "delete",
  "principal": {
    "some": "principal",
  },
  "subject": {
    "subjectType": "product",
    "wrappedSubject": EntityRef {
      "data": {
        "id": "productId",
        "organizationId": "organizationId",
      },
      "type": "product",
    },
  },
}
`;

exports[`accessQueryPresetFactory provided methods are assigned to final object and those methods return access control query params with action and subject 2`] = `
{
  "action": "create",
  "principal": {
    "some": "principal",
  },
  "subject": {
    "subjectType": "product",
    "wrappedSubject": EntityRef {
      "data": {
        "id": "organizationId",
      },
      "type": "organization",
    },
  },
}
`;

exports[`accessQueryPresetFactory provided methods are assigned to final object and those methods return access control query params with action and subject 3`] = `
{
  "action": "update",
  "principal": {
    "some": "principal",
  },
  "subject": {
    "subjectType": "product",
    "wrappedSubject": EntityRef {
      "data": {
        "id": "productId",
        "organizationId": "organizationId",
      },
      "type": "product",
    },
  },
}
`;
